--- a/src/app/views/recipes/create.njk
+++ b/src/app/views/recipes/create.njk
@@ -7,7 +7,11 @@
 <div class="container fields-container">
    <h2>Criando receita</h2>
 
-   <form class="card" method="POST" action="/admin/recipes">
+   <form 
+      class="card" 
+      method="POST" 
+      action="/admin/recipes" 
+      enctype="multipart/form-data">
       
       {% include "recipes/fields.njk" %}
 
