--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -54,9 +54,35 @@
 
 /* presentation */
 
-.container.show img {
+#gallery #main-image {
+   max-width: 100%;
+   max-height: 280px;
+
+   margin-bottom: 8px;
+}
+
+#gallery #main-image img {
+   width: 100%;
+   height: 100%;
+
    border-radius: 15px;
-   margin-bottom: 50px;
+}
+
+#gallery #side-images {
+   display: flex;
+   flex-direction: row;
+   
+   justify-content: flex-end;
+}
+
+#gallery #side-images img {
+   width: 50px;
+   height: 50px;
+   object-fit: cover;
+   cursor: pointer;
+
+   margin-left: 10px;
+   border-radius: 3px;
 }
 
 .show .presentation {
