--- a/src/app/views/recipes/show.njk
+++ b/src/app/views/recipes/show.njk
@@ -27,6 +27,7 @@
                   src="{{file.src}}" 
                   alt="{{file.name}}" 
                   {% if loop.index0 == 0 %} class="active" {% endif %}
+                  onclick="ImageGallery.setImage(event)"
                >
             </div>   
          {% endfor %}
