--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -52,19 +52,14 @@
    margin-bottom: 51px;
 }
 
-/* presentation */
-
-#gallery #main-image {
-   max-width: 100%;
-   max-height: 280px;
-
-   margin-bottom: 8px;
-}
+/* gallery */
 
 #gallery #main-image img {
    width: 100%;
-   height: 100%;
-
+   height: 280px;
+   object-fit: cover;
+   
+   margin-bottom: 8px;
    border-radius: 15px;
 }
 
@@ -85,6 +80,22 @@
    border-radius: 3px;
 }
 
+#gallery #side-images img {
+   width: 50px;
+   height: 50px;
+   object-fit: cover;
+   cursor: pointer;
+   opacity: 0.5;
+
+   margin-left: 10px;
+   border-radius: 3px;
+}
+
+#gallery #side-images img.active {
+   opacity: 1;
+}
+
+/* presentation */
 .show .presentation {
    text-align: center;
 }
