Adjusting chefs frontend to work with files

--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -7,7 +7,7 @@
 <div class="container fields-container">
    <h2>Novo Chef</h2>
 
-   <form class="card" method="POST" action="/admin/chefs">
+   <form class="card" method="POST" action="/admin/chefs" enctype="multipart/form-data">
       
       {% include "chefs/fields.njk" %}
 
