--- a/src/app/views/chefs/index.njk
+++ b/src/app/views/chefs/index.njk
@@ -11,7 +11,7 @@
       {% for chef in chefs %}
       
       <li class="chef">
-         <span style="background-image: url({{chef.image}})"></span>
+         <img src={{chef.image_src}} alt="Imagem do chef {{chef.name}}">
          <div class="info">
             <h4>{{chef.name}}</h4>
             <a href="/admin/chefs/{{chef.id}}">Visualizar</a>
