--- a/public/styles/chefs.css
+++ b/public/styles/chefs.css
@@ -21,12 +21,12 @@
    margin-bottom: 30px;
 }
 
-#chefs .chef span {
+#chefs .chef img {
    width: 64px;
    height: 64px;
 
-   background-position: center;
-   background-size: cover;
+   object-position: center;
+   object-fit: cover;
 
    border-radius: 50%;
    box-shadow: 3px 1px 6px -4px black;
@@ -60,14 +60,14 @@
    margin-bottom: 51px;
 }
 
-.chef-presentation span {
+.chef-presentation img {
    display: block;
 
    width: 200px;
    height: 200px;
 
-   background-size: cover;
-   background-position: center;
+   object-fit: cover;
+   object-position: center;
 
    border-radius: 50%;
    margin: 0 auto;
@@ -86,6 +86,8 @@
    color: #777777;
    text-align: center;
 }
+
+/* chef recipes */
 
 .chef-recipes {
    display: grid;
@@ -115,12 +117,12 @@
    margin-bottom: 30px;
 }
 
-.chef-recipes span {
+.chef-recipes img {
    width: 172px;
    height: 80px;
 
-   background-position: center;
-   background-size: cover;
+   object-position: center;
+   object-fit: cover;
 
    border-radius: 8px;
 }
