--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -77,7 +77,7 @@
    margin-bottom: 45px;
 }
 
-/* images upload */
+/* recipes images upload */
 
 .item .images-upload {
    width: 150px;
@@ -88,13 +88,14 @@
    margin-right: 0;
    
    position: relative;
+   display: flex;
 }
 
 .item .images-upload:hover {
    border: 2px solid #999999;
 }
 
-.item .images-upload #images-input {
+.item .images-upload input {
    width: 100%;
    height: 180px;
 
@@ -187,4 +188,53 @@
 
 #images-preview .preview:hover i {
    opacity: 1;
+}
+
+/* chefs images upload */
+
+#chef-gallery #chef-image {
+   position: relative;
+   display: flex;
+   
+   width: 140px;
+   height: 38px;
+
+   background-color: #6558C3;
+   
+   border-radius: 4px;
+   margin-bottom: 180px;
+}
+
+#chef-gallery #chef-image input {
+   width: 100%;
+   height: 68px;
+
+   opacity: 0;
+   padding: 0;
+   margin: 0;
+
+   position: absolute;
+   top: -30px;
+
+   cursor: pointer;
+   z-index: 1;
+}
+
+#chef-gallery #chef-image p {
+   position: absolute;
+   top: 0;
+   left: 0;
+
+   width: 100%;
+   height: 100%;
+
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   padding: 0;
+   margin: 0;
+
+   font-size: 16px;
+   color: #FFFFFF;
 }
