--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -238,3 +238,11 @@
    font-size: 16px;
    color: #FFFFFF;
 }
+
+#chef-gallery #chef_image-input {
+   font-family: Helvetica;
+   font-size: 16px;
+   color: #DDDDDD;
+
+   margin-bottom: 15px;
+}
