--- a/src/app/views/chefs/edit.njk
+++ b/src/app/views/chefs/edit.njk
@@ -7,17 +7,19 @@
 <div class="container fields-container">
    <h2>Editar Chef</h2>
 
-   <form class="card" method="POST" action="/admin/chefs?_method=PUT">
+   <form class="card" method="POST" action="/admin/chefs?_method=PUT" enctype="multipart/form-data">
       
       {% include "chefs/fields.njk" %}
 
       <input type="hidden" name="id" value={{chef.id}}>
+      <input type="hidden" name="file_id" value={{file.id}}>
       <button class="button" type="submit">Salvar</button>
       
    </form>
 
-   <form class="card" id="form-delete" method="POST" action="/chefs?_method=DELETE">
+   <form class="card" id="form-delete" method="POST" action="/admin/chefs?_method=DELETE">
       <input type="hidden" name="id" value={{chef.id}}>
+      <input type="hidden" name="file_id" value={{file.id}}>
       <button class="delete-button" type="submit">Deletar</button>
    </form>
 </div>
