--- a/src/app/views/parts/recipes-cards.njk
+++ b/src/app/views/parts/recipes-cards.njk
@@ -4,8 +4,8 @@
    <ul>
       {% for recipe in recipes %}
       <li class="card">
-         <img src="{{recipe.image}}" alt="{{recipe.title}}">
-         <h4>{{recipe.title}}<p>
+         <img src="{{recipe.image_src}}" alt="{{recipe.title}}">
+         <h4>{{recipe.title}}</h4>
          <p>por: {{recipe.chef_name}}</p>
       </li>
       {% endfor %}
