Separating home's routes

--- a/src/app/views/parts/home-header.njk
+++ b/src/app/views/parts/home-header.njk
@@ -6,9 +6,9 @@
       </div>
       <div class="menu">
          <ul>
-            <li> <a href="/home">Sobre</a> </li>
-            <li> <a href="/recipes">Receitas</a> </li>
-            <li> <a href="/chefs">Chefs</a> </li>
+            <li> <a href="/home/index">Sobre</a> </li>
+            <li> <a href="/home/recipes">Receitas</a> </li>
+            <li> <a href="/home/chefs">Chefs</a> </li>
          </ul>
       </div>
 </header>
