--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -1,4 +1,4 @@
-/** RECIPES AND CHEFS FIELDS **/
+/** RECIPE'S AND CHEF'S FIELDS **/
 
 .fields-container h2 {
    font-size: 24px;
@@ -68,7 +68,7 @@
    font-family: 'Roboto', sans-serif;
 }
 
-/** IMAGES **/
+/** RECIPE IMAGES **/
 
 .item .images {
    display: flex;
@@ -77,7 +77,7 @@
    margin-bottom: 45px;
 }
 
-/* recipes images upload */
+/* recipe's images upload */
 
 .item .images-upload {
    width: 150px;
@@ -141,7 +141,7 @@
    margin-left: 16px;
 }
 
-/* images preview */
+/* recipe's images preview */
 
 #images-preview {
    display: flex;
@@ -158,7 +158,6 @@
 
    z-index: 1;
 }
-
 
 #images-preview .preview img {
    width: 100%;
@@ -190,7 +189,7 @@
    opacity: 1;
 }
 
-/* chefs images upload */
+/* chef's images upload */
 
 #chef-gallery #chef-image {
    position: relative;
@@ -245,4 +244,75 @@
    color: #DDDDDD;
 
    margin-bottom: 15px;
+}
+
+/** USER'S FIELDS **/
+
+.user-form {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+}
+
+.user-form .item input {
+   width: 450px;
+}
+
+.user-form .item #admin-item {
+   display: flex;
+   align-items: center;
+   
+   position: relative;
+   align-items: center;
+
+   margin-bottom: 150px;
+}
+
+.user-form .item #admin-item .item-title {
+   margin-bottom: 0;
+}
+
+.user-form .item #is_admin-input {
+   width: 15px;
+   height: 15px;
+   opacity: 0;
+   cursor: pointer;
+
+   z-index: 1;
+}
+
+.user-form .item #checkmark{
+   width: 15px;
+   height: 15px;
+
+   border: 1px solid #DDDDDD;
+   border-radius: 4px;
+
+   margin-right: 8px;
+   margin-left: -15px;
+}
+
+.user-form .item #is_admin-input:checked ~ #checkmark{
+   background-color: #2196F3;
+}
+
+#checkmark::after{
+   content: "";
+   position: absolute;
+   display: none;
+}
+
+#is_admin-input:checked ~ #checkmark::after{
+   display: block;
+}
+
+.user-form .item #is_admin-input:checked ~ #checkmark::after{
+   left: 4px;
+   top: 4px;
+   width: 4px;
+   height: 8px;
+   border: solid white;
+   border-width: 0 2px 2px 0;
+   -webkit-transform: rotate(45deg);
+   -ms-transform: rotate(45deg);
+   transform: rotate(45deg);
 }
