--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -4,3 +4,4 @@
 <link rel="stylesheet" href="/styles/fields.css">
 <link rel="stylesheet" href="/styles/recipes.css">
 <link rel="stylesheet" href="/styles/chefs.css">
+<link rel="stylesheet" href="/styles/users.css">
