--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -1,25 +1,27 @@
-<div class="item">
-   <div class="item-title">Nome</div>
-   <div>
-      <input 
-         id="name-input"
-         type="text"
-         name="name"
-         value="{{user.name}}"
-         placeholder="Seu nome aqui"
-      >
+<div id="user-info">
+   <div class="item">
+      <div class="item-title">Nome</div>
+      <div>
+         <input 
+            id="name-input"
+            type="text"
+            name="name"
+            value="{{user.name}}"
+            placeholder="Seu nome aqui"
+         >
+      </div>
    </div>
-</div>
 
-<div class="item">
-   <div class="item-title">Email</div>
-   <div>
-      <input 
-         type="email"
-         name="email"
-         value="{{user.email}}"
-         placeholder="seu_email@aqui.com"
-      >
+   <div class="item">
+      <div class="item-title">Email</div>
+      <div>
+         <input 
+            type="email"
+            name="email"
+            value="{{user.email}}"
+            placeholder="seu_email@aqui.com"
+         >
+      </div>
    </div>
 </div>
 
