--- a/src/app/views/users/forgot-form.njk
+++ b/src/app/views/users/forgot-form.njk
@@ -17,27 +17,18 @@
       </header>
 
       <section>
-         <h2>Iniciar Sessão</h2>
-         <form method="POST" action="/admin/users/login">
+         <h2>Esqueceu a senha?</h2>
+         <form method="POST" action="/admin/users/forgot">
             <label for="email">Email</label>
             <input 
                type="text" 
                id="email" 
                name="email" 
-               placeholder="Digite seu email"
+               placeholder="Digite seu email para recuperar a senha"
             >
             
-            <label for="password">Senha</label>
-            <input 
-               type="password" 
-               id="password" 
-               name="password" 
-               placeholder="Digite sua senha"
-            >
-            
-            <button class="button" type="submit">Acessar</button>
+            <button class="button" type="submit">Recuperar</button>
          </form>
-         <a href="/admin/users/forgot-password">Perdeu a senha?</a>
       </section>
 
    </body>
