--- a/src/app/views/users/reset-form.njk
+++ b/src/app/views/users/reset-form.njk
@@ -17,27 +17,34 @@
       </header>
 
       <section>
-         <h2>Iniciar Sessão</h2>
-         <form method="POST" action="/admin/users/login">
+         <h2>Esqueceu a senha?</h2>
+         <form method="POST" action="/admin/users/reset">
             <label for="email">Email</label>
             <input 
                type="text" 
                id="email" 
                name="email" 
-               placeholder="Digite seu email"
+               placeholder="Digite seu email para recuperar a senha"
             >
             
-            <label for="password">Senha</label>
+            <label for="password">Nova senha</label>
             <input 
                type="password" 
                id="password" 
                name="password" 
-               placeholder="Digite sua senha"
+               placeholder="Digite sua nova senha"
             >
             
-            <button class="button" type="submit">Acessar</button>
+            <label for="password-confirm">Nova senha</label>
+            <input 
+               type="password" 
+               id="password-confirm" 
+               name="password-confirm" 
+               placeholder="Repita sua nova senha"
+            >
+            
+            <button class="button" type="submit">Recuperar</button>
          </form>
-         <a href="/admin/users/forgot-password">Perdeu a senha?</a>
       </section>
 
    </body>
