Implementing frontend email validation

--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -20,6 +20,7 @@
             name="email"
             value="{{user.email}}"
             placeholder="seu_email@aqui.com"
+            onBlur="Validate.apply(this, 'isEmail')"
          >
       </div>
    </div>
