--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -257,6 +257,20 @@
    width: 450px;
 }
 
+.user-form .item .error {
+   font-size: 14px;
+   font-weight: bold;
+   color: white;
+   text-align: center;
+
+   padding-top: 2px;
+   border-radius: 4px;
+
+   width: 100px;
+   height: 20px;
+   background-color: #DC4747;
+}
+
 .user-form .item #admin-item {
    display: flex;
    align-items: center;
