Creating messages of success and error

--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -5,3 +5,4 @@
 <link rel="stylesheet" href="/styles/recipes.css">
 <link rel="stylesheet" href="/styles/chefs.css">
 <link rel="stylesheet" href="/styles/users.css">
+<link rel="stylesheet" href="/styles/message.css">
