--- a/src/app/views/users/register.njk
+++ b/src/app/views/users/register.njk
@@ -5,7 +5,7 @@
 {% include "parts/admin-header.njk" %}
 
 <div class="container fields-container">
-   <h2>Criar receita</h2>
+   <h2>Criar Usuário</h2>
 
    <form 
       class="user-form" 
