Fixing link route

--- a/src/app/views/home/search.njk
+++ b/src/app/views/home/search.njk
@@ -8,7 +8,7 @@
    
    {% include "parts/home-header.njk" %}
 
-   <form action="/search">
+   <form action="/home/search">
       {{search.form('search-home')}}
    </form>
    
