--- a/public/styles/fields.css
+++ b/public/styles/fields.css
@@ -1,3 +1,13 @@
+@keyframes fadeaway {
+   from {
+      border-color: #DC4747;
+   }
+   
+   to {
+      border-color: #DDDDDD;
+   }
+}
+
 /** RECIPE'S AND CHEF'S FIELDS **/
 
 .fields-container h2 {
@@ -26,6 +36,13 @@
    font-size: 16px;
    padding-left: 10px;
    color: rgb(39, 38, 38);
+}
+
+.item .error-input {
+   border-color: #DDDDDD;
+   
+   animation: fadeaway 7s;
+   animation-timing-function: ease-in;   
 }
 
 .item select {
@@ -79,7 +96,7 @@
 
 /* recipe's images upload */
 
-.item .images-upload {
+.item #images-upload {
    width: 150px;
    height: 150px;
 
@@ -91,11 +108,16 @@
    display: flex;
 }
 
-.item .images-upload:hover {
+.item #images-upload.error-input {
+   animation: fadeaway 7s;
+   animation-timing-function: ease-in;
+}
+
+.item #images-upload:hover {
    border: 2px solid #999999;
 }
 
-.item .images-upload input {
+.item #images-upload input {
    width: 100%;
    height: 180px;
 
@@ -126,7 +148,7 @@
    color: #DDDDDD;
 }
 
-.images-upload:hover i {
+#images-upload:hover i {
    color: #999999;
 }
 
@@ -268,6 +290,7 @@
 
    width: 100px;
    height: 20px;
+
    background-color: #DC4747;
 }
 
