--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -35,7 +35,7 @@
          type="checkbox"
          name="is_admin"
          value=true
-         {% if user.is_admin == true %}
+         {% if user.is_admin %}
          checked
          {% endif %}
       >
