--- a/src/app/views/users/profile.njk
+++ b/src/app/views/users/profile.njk
@@ -48,7 +48,7 @@
                   <input 
                      type="password"
                      name="password"
-                     placeholder="Digite sua senha"
+                     placeholder="Para mudar seus dados, digite sua senha"
                   >
                </div>
             </div>
