--- a/src/app/views/recipes/index.njk
+++ b/src/app/views/recipes/index.njk
@@ -8,26 +8,26 @@
    <h2>Gerenciar receitas</h2>
 
    <ul id="recipe-list">
-      {% for recipe in recipes %}
-      
-      <li class="recipe-card">
-         <img src="{{recipe.image_src}}" alt="Imagem da receita {{recipe.title}}">
-         <div class="card-info">
-            <h3>{{recipe.title}}</h3>
-            <p>por: {{recipe.chef_name}}</p>
-            <a href="/admin/recipes/{{recipe.id}}">Visualizar</a>
-         </div>
-      </li>
-      
-      {% endfor %}
+      {% if recipes %}
+         {% for recipe in recipes %}
+            <li class="recipe-card">
+               <img src="{{recipe.image_src}}" alt="Imagem da receita {{recipe.title}}">
+               <div class="card-info">
+                  <h3>{{recipe.title}}</h3>
+                  <p>por: {{recipe.chef_name}}</p>
+                  <a href="/admin/recipes/{{recipe.id}}">Visualizar</a>
+               </div>
+            </li>         
+         {% endfor %}
+      {% endif %}
    </ul>
 </div>
-
-<div 
-   class="pagination"
-   data-page={{pagination.page}}
-   data-total={{pagination.total}}
->
-</div>
+{% if pagination %}
+   <div 
+      class="pagination"
+      data-page={{pagination.page}}
+      data-total={{pagination.total}}
+   ></div>   
+{% endif %}
 
 {% endblock %}
