Using chefs' loaders and chefs' recipes loaders

--- a/src/app/views/chefs/edit.njk
+++ b/src/app/views/chefs/edit.njk
@@ -19,7 +19,7 @@
 
    <form class="card" id="form-delete" method="POST" action="/admin/chefs?_method=DELETE">
       <input type="hidden" name="id" value={{chef.id}}>
-      <input type="hidden" name="file_id" value={{file.id}}>
+      <input type="hidden" name="file_id" value={{image.id}}>
       <button class="delete-button" type="submit">Deletar</button>
    </form>
 </div>
