--- a/src/app/views/home/search.njk
+++ b/src/app/views/home/search.njk
@@ -23,4 +23,10 @@
    </section>
 </div>
 
+<div 
+   class="pagination"
+   data-page={{pagination.page}}
+   data-total={{pagination.total}}
+></div>
+
 {% endblock %}
