--- a/src/app/views/chefs/show.njk
+++ b/src/app/views/chefs/show.njk
@@ -8,9 +8,11 @@
    <section id="top-content">
       <div>
          <h2>Chef: {{chef.name}}</h2>
-         <a href="/admin/chefs/{{chef.id}}/edit">
-            <button class="button">Editar</button>
-         </a>
+         {% if user.is_admin %}
+            <a href="/admin/chefs/{{chef.id}}/edit">
+               <button class="button">Editar</button>
+            </a>
+         {% endif %}
       </div>
    </section>
 
