Adding option to display only the logged user's recipes

--- a/src/app/views/parts/admin-header.njk
+++ b/src/app/views/parts/admin-header.njk
@@ -5,20 +5,25 @@
 
    <div class="menu links">
       <ul>
-         <li>
+         <li id="recipes">
             <a class="main-links" href="/admin/recipes">Receitas</a>
+            <ul class="submenu">
+               <li>
+                  <a href="/admin/recipes/user">Minhas receitas</a>
+               </li>
+            </ul>
          </li>
          <li>
             <a class="main-links" href="/admin/chefs">Chefs</a>
          </li>
-         <li id="users">
+         <li>
             <a class="main-links" href="/admin/users">Usuários</a>
             <ul class="submenu">
                <li>
-                  <a href="/admin/users/profile">Configurações</a>
+                  <a href="/admin/users/profile">Minha Conta</a>
                </li>
                <li>
-                  <a href="/admin/users/recipes">Minhas Receitas</a>
+                  <a href="/admin/recipes/user">Minhas Receitas</a>
                </li>
                <li>
                   <form  
