--- a/public/styles/parts.css
+++ b/public/styles/parts.css
@@ -93,11 +93,11 @@ header .menu ul li a.active {
 
 /* header menu dropdown */
 
-#admin-header ul #users {
+#admin-header ul li {
    position: relative;
 }
 
-#admin-header ul #users .submenu {
+#admin-header ul li .submenu {
    position: absolute;
    left: 7px;
    width: 120px;
@@ -114,20 +114,28 @@ header .menu ul li a.active {
    transition: all 300ms;
 }
 
-#admin-header ul #users:hover .submenu {
-   visibility: visible;
-   opacity: 1;
-   top: 18px;
+#admin-header ul #recipes .submenu {
+   position: absolute;
+   left: -28px;
+   width: 120px;
+   display: block;
+   text-align: center;
 }
 
-#admin-header ul #users .submenu li {
+#admin-header ul li:hover .submenu {
+   visibility: visible;
+   opacity: 1;
+   top: 16px;
+}
+
+#admin-header ul li .submenu li {
    max-width: 120px;
    padding: 0;
    border-radius: 4px;
 }
 
-#admin-header ul #users .submenu li a,
-#admin-header ul #users .submenu li button {
+#admin-header ul li .submenu li a,
+#admin-header ul li .submenu li button {
    font-size: 13px;
    color:rgb(26, 26, 26);
    font-weight: normal;
@@ -145,13 +153,13 @@ header .menu ul li a.active {
    transition: 200ms;
 }
 
-#admin-header ul #users .submenu li a.active {
+#admin-header ul li .submenu li a.active {
    font-weight: normal;
    filter: none;
 }
 
-#admin-header ul #users .submenu li:hover a,
-#admin-header ul #users .submenu li:hover button {
+#admin-header ul li .submenu li:hover a,
+#admin-header ul li .submenu li:hover button {
    background-color: #eee;
    font-weight: bold;
 }
