--- a/public/styles/recipes.css
+++ b/public/styles/recipes.css
@@ -10,6 +10,7 @@
 #recipe-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
+   grid-column-gap: 16px;
 }
 
 #recipe-list .recipe-card {
