Adding button to create new recipe

--- a/src/app/views/recipes/index.njk
+++ b/src/app/views/recipes/index.njk
@@ -6,6 +6,10 @@
 
 <div class="container recipes-container">
    <h2>Gerenciar receitas</h2>
+   
+   <a href="/admin/recipes/create">
+      <button class="button">Adicionar</button>
+   </a>
 
    <ul id="recipe-list">
       {% if recipes %}
