Adding an route to login

--- a/src/app/views/parts/home-header.njk
+++ b/src/app/views/parts/home-header.njk
@@ -1,14 +1,15 @@
 <header id="home-header">
       <div class="logo">
-         <a href="/home">
+         <a href="/home/index">
             <img src="/images/logo-home.png" alt="Logo do foodfy">
          </a>
       </div>
       <div class="menu">
          <ul>
-            <li> <a href="/home/index">Sobre</a> </li>
-            <li> <a href="/home/recipes">Receitas</a> </li>
-            <li> <a href="/home/chefs">Chefs</a> </li>
+            <li><a href="/home/index">Sobre</a></li>
+            <li><a href="/home/recipes">Receitas</a></li>
+            <li><a href="/home/chefs">Chefs</a></li>
+            <li><a href="/admin/users/login">Login</a></li>
          </ul>
       </div>
 </header>
