Creating a frontend fields validation

--- a/src/app/views/chefs/create.njk
+++ b/src/app/views/chefs/create.njk
@@ -11,7 +11,13 @@
       
       {% include "chefs/fields.njk" %}
 
-   <button class="button" type="submit">Salvar</button>
+   <button 
+      class="button" 
+      type="submit"
+      onclick="Validate.allFields(event)"
+   >
+   Salvar
+   </button>
       
    </form>
 </div>
