--- a/src/app/views/users/register.njk
+++ b/src/app/views/users/register.njk
@@ -15,7 +15,13 @@
       
       {% include "users/fields.njk" %}
 
-      <button class="button" type="submit">Salvar</button>
+      <button 
+         class="button" 
+         type="submit"
+         onclick="Validate.allFields(event)"
+      >
+      Salvar
+      </button>
       
    </form>
 </div>
