--- a/src/app/views/recipes/create.njk
+++ b/src/app/views/recipes/create.njk
@@ -15,7 +15,11 @@
       
       {% include "recipes/fields.njk" %}
 
-      <button class="button" type="submit">Salvar</button>
+      <button 
+         class="button" 
+         type="submit"
+         onclick="Validate.allFields(event)"
+      >Salvar</button>
       
    </form>
 </div>
