--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -6,3 +6,4 @@
 <link rel="stylesheet" href="/styles/chefs.css">
 <link rel="stylesheet" href="/styles/users.css">
 <link rel="stylesheet" href="/styles/message.css">
+<link rel="stylesheet" href="/styles/animations.css">
